--- a/blog/templates/blog/Post/post_list.html
+++ b/blog/templates/blog/Post/post_list.html
@@ -4,10 +4,24 @@
 
 {% block content %}
 <h1>This is the h1 title</h1>
-{% for post in object_list %}
+{% for post in blog_posts %}
 <h2>
     <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
-
+    
+    {% if post.tags.all|length > 0 %}
+    <p class="tags">
+      Tags:
+      {% for tag in post.tags.all %}
+        <a href="{{ tag.slug }}">
+          {{ tag.name }}
+        </a>
+        {% if not forloop.last %}, {% endif %}
+      {% endfor %}
+ </p>
+ {% else %}
+ <p>No tags associated with this post yet</p>
+ {% endif %}
+ 
 </h2>
 {% endfor %}
 {% endblock %}
