--- a/blog/templates/blog/Post/post_list.html
+++ b/blog/templates/blog/Post/post_list.html
@@ -6,13 +6,13 @@
 <h1>This is the h1 title</h1>
 {% for post in blog_posts %}
 <h2>
-    <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
-    
+    <a href="{{ post.get_absolute_url }}">{{ post.title }} {{ post.readtime }} minute read time {{ post.created }}</a>
+   
     {% if post.tags.all|length > 0 %}
     <p class="tags">
       Tags:
       {% for tag in post.tags.all %}
-        <a href="{{ tag.slug }}">
+        <a href="{% url "post_list_by_tag" tag.slug  %}">
           {{ tag.name }}
         </a>
         {% if not forloop.last %}, {% endif %}
@@ -21,7 +21,7 @@
  {% else %}
  <p>No tags associated with this post yet</p>
  {% endif %}
- 
+ <hr>
 </h2>
 {% endfor %}
 {% endblock %}
