--- a/blog/templates/blog/Post/post_detail.html
+++ b/blog/templates/blog/Post/post_detail.html
@@ -1,10 +1,11 @@
 {% extends "blog/base.html" %}
 {% block title %}{{ post.title }}{% endblock %}
+{% load markdownify %}
 
 
 {% block content %}
 <p>{{ post.readtime }} minute read</p>
-<p>{{ post.formatted_markdown|safe }}</p>
+<p>{{ post.body|markdown_prettify|safe}}</p>
 
 
 
