Postgres text search and search view all across

--- a/blog/templates/blog/Post/post_detail.html
+++ b/blog/templates/blog/Post/post_detail.html
@@ -51,8 +51,15 @@ There are no comments yet.
 </form>
 
 <hr>
-    
 
+<div>
+<h1>Search Bar</h1>
+<form actions='{% url 'post_list' %}'  method="get" >
+  {% csrf_token %}
+  {{ query_form }}
+  <input type="submit" value="Send message">
+</form>
+</div>
 {% endblock %}
 
 
