--- a/blog/templates/blog/Post/adjust_testing.html
+++ b/blog/templates/blog/Post/adjust_testing.html
@@ -1,22 +1,23 @@
-
-{% extends "blog/base.html" %}
-
-
-{% block content %}
+{% extends "blog/base.html" %} {% block content %}
 <p>
-<a href="https://app.adjust.com/7qo086h">Adjust Click Based URL</a>
+  <a href="https://app.adjust.com/7qo086h">Adjust Click Based URL</a>
 </p>
 
 <p>
-    <a href="https://view.adjust.com/impression/7qo086h">Adjust Impression Based URL</a>
-    </p>
-    
-    
-<p>
-<a href="https://f36m.adj.st/?adjust_t=7qo086h">Adjust universal link with Tracker Token</a>
+  <a href="https://view.adjust.com/impression/7qo086h"
+    >Adjust Impression Based URL</a
+  >
+</p>
 
+<p>
+  <a href="https://f36m.adj.st/?adjust_t=7qo086h"
+    >Adjust universal link with Tracker Token</a
+  >
 </p>
 <p>
-    <a href="https://f36m.adj.st">Adjust universal link without Tracker token</a>
-    </p>
+  <a
+    href="https://f36m.adj.st?adjust_t=7qo086h&adjust_deeplink=halan%3A%2F%2F&deeplink=halan%3A%2F%2F"
+    >Adjust universal link without Tracker token</a
+  >
+</p>
 {% endblock %}
