--- a/blog/templates/blog/Post/adjust_testing.html
+++ b/blog/templates/blog/Post/adjust_testing.html
@@ -16,7 +16,7 @@
 </p>
 <p>
   <a
-    href="https://f36m.adj.st?adjust_t=7qo086h&adjust_deeplink=halan%3A%2F%2F&deeplink=halan%3A%2F%2F"
+    href="https://f36m.adj.st?adjust_t=7qo086h&adjust_deeplink=halan%3A%2F%2F%7B%22type%22%3A%22url%22%2C%22values%22%3A%225dff87fa77b12800211401a0%22%7D&deeplink=halan%3A%2F%2F%7B%22type%22%3A%22url%22%2C%22values%22%3A%225dff87fa77b12800211401a0%22%7D"
     >Adjust universal link without Tracker token</a
   >
 </p>
